footer fix wrap

--- a/assets/styles/Card.less
+++ b/assets/styles/Card.less
@@ -6,6 +6,7 @@
     grid-template-columns: repeat(1, 1fr);
     grid-gap: @cards-gap;
     padding: @cards-gap;
+    padding-bottom: 0;
     margin: auto;
 }
 .Card {
@@ -105,6 +106,7 @@
 @media (min-width: 1280px) {
     .CardContainer {
         padding: 20px;
+        padding-bottom: 0;
         max-width: 1500px;
     }
 }
